--- a/src/layouts/Header.astro
+++ b/src/layouts/Header.astro
@@ -3,7 +3,7 @@
 ---
 
 <header class="l-header">
-  <a href="" class="l-header__link">
+  <a href="/" class="l-header__link">
     <h1 class="l-header__logo">astro-wp-integration</h1>
   </a>
   <nav class="l-header__nav">
@@ -12,7 +12,7 @@
         <a href="" class="l-header__link">About</a>
       </li>
       <li class="l-header__item">
-        <a href="" class="l-header__link">Works</a>
+        <a href="/works/" class="l-header__link">Works</a>
       </li>
       <li class="l-header__item">
         <a href="" class="l-header__link">Contact</a>
