--- a/src/layouts/Header.astro
+++ b/src/layouts/Header.astro
@@ -9,7 +9,7 @@
   <nav class="l-header__nav">
     <ul class="l-header__list">
       <li class="l-header__item">
-        <a href="" class="l-header__link">About</a>
+        <a href="/about/" class="l-header__link">About</a>
       </li>
       <li class="l-header__item">
         <a href="/works/" class="l-header__link">Works</a>
